Pushing the docs for revision for branch: development, commit c3d77829ff747eb795c65c9b0452370e8a2ff381, folder: dev

--- a/dev/_modules/hpolib/benchmarks/ml/conv_net.html
+++ b/dev/_modules/hpolib/benchmarks/ml/conv_net.html
@@ -238,13 +238,12 @@
                            <span class="p">[</span><span class="mi">4</span><span class="p">,</span> <span class="mi">8</span><span class="p">],</span>  <span class="c1"># n_units_1</span>
                            <span class="p">[</span><span class="mi">4</span><span class="p">,</span> <span class="mi">8</span><span class="p">],</span>  <span class="c1"># n_units_2</span>
                            <span class="p">[</span><span class="mi">4</span><span class="p">,</span> <span class="mi">8</span><span class="p">]],</span>  <span class="c1"># n_units_3</span>
-                <span class="s1">&#39;references&#39;</span><span class="p">:</span>
-                    <span class="p">[</span><span class="s2">&quot;@article{klein-bnn16a,&quot;</span>
-       <span class="s2">&quot;author = {A. Klein and S. Falkner and T. Springenberg and F. Hutter},&quot;</span>
-       <span class="s2">&quot;title = {Bayesian Neural Network for Predicting Learning Curves},&quot;</span>
-       <span class="s2">&quot;booktitle = {NIPS 2016 Bayesian Neural Network Workshop},&quot;</span>
-       <span class="s2">&quot;month = dec,&quot;</span>
-       <span class="s2">&quot;year = </span><span class="si">{2016}</span><span class="s2">}&quot;</span><span class="p">]</span>
+                <span class="s1">&#39;references&#39;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;@InProceedings{klein-aistats17,&quot;</span>
+                               <span class="s2">&quot;author = {A. Klein and S. Falkner and S. Bartels and P. Hennig and F. Hutter},&quot;</span>
+                               <span class="s2">&quot;title = {Fast </span><span class="si">{Bayesian}</span><span class="s2"> Optimization of Machine&quot;</span>
+                               <span class="s2">&quot;Learning Hyperparameters on Large Datasets},&quot;</span>
+                               <span class="s2">&quot;booktitle = {Proceedings of the AISTATS conference},&quot;</span>
+                               <span class="s2">&quot;year = </span><span class="si">{2017}</span><span class="s2">}&quot;</span><span class="p">]</span>
                 <span class="p">}</span></div>
 
 <div class="viewcode-block" id="ConvolutionalNeuralNetwork.iterate_minibatches"><a class="viewcode-back" href="../../../../ml_benchmarks/conv_net.html#hpolib.benchmarks.ml.conv_net.ConvolutionalNeuralNetwork.iterate_minibatches">[docs]</a>    <span class="k">def</span> <span class="nf">iterate_minibatches</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">inputs</span><span class="p">,</span> <span class="n">targets</span><span class="p">,</span> <span class="n">batch_size</span><span class="p">,</span> <span class="n">shuffle</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
