--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -250,7 +250,13 @@
 </li>
         <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SupportVectorMachine.get_data">(hpolib.benchmarks.ml.svm_benchmark.SupportVectorMachine method)</a>
 </li>
+        <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnAdult.get_data">(hpolib.benchmarks.ml.svm_benchmark.SvmOnAdult method)</a>
+</li>
         <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnCovertype.get_data">(hpolib.benchmarks.ml.svm_benchmark.SvmOnCovertype method)</a>
+</li>
+        <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnHiggs.get_data">(hpolib.benchmarks.ml.svm_benchmark.SvmOnHiggs method)</a>
+</li>
+        <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnLetter.get_data">(hpolib.benchmarks.ml.svm_benchmark.SvmOnLetter method)</a>
 </li>
         <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnMnist.get_data">(hpolib.benchmarks.ml.svm_benchmark.SvmOnMnist method)</a>
 </li>
@@ -523,9 +529,15 @@
 </li>
       <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SupportVectorMachine">SupportVectorMachine (class in hpolib.benchmarks.ml.svm_benchmark)</a>
 </li>
+      <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnAdult">SvmOnAdult (class in hpolib.benchmarks.ml.svm_benchmark)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnCovertype">SvmOnCovertype (class in hpolib.benchmarks.ml.svm_benchmark)</a>
+</li>
+      <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnHiggs">SvmOnHiggs (class in hpolib.benchmarks.ml.svm_benchmark)</a>
+</li>
+      <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnLetter">SvmOnLetter (class in hpolib.benchmarks.ml.svm_benchmark)</a>
 </li>
       <li><a href="ml_benchmarks/svm.html#hpolib.benchmarks.ml.svm_benchmark.SvmOnMnist">SvmOnMnist (class in hpolib.benchmarks.ml.svm_benchmark)</a>
 </li>
